--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
   <title>The Gallery</title>
   <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
 </head>
-  
+
+<body>
+  <div style="padding-bottom: 10px; position: fixed; z-index: 4000; left: 0; right: 0;">
+   <div style="background: #800000;">
+    <div class="header">
+    </div>
+   </div>
+  </div>
+  <h1>Hello! Welcome to The Gallery!</h1>
+  <p>This page is a WebXR experience best viewed in VR. Please press the button below to enter</p>
+</body>
+
 </html>
