--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="site/style.css" rel="stylesheet" type="text/css" />
 
 <head>
   <title>The Gallery</title>
